# NumerischeIntegration

./: CMakeLists.txt  main.cpp
google_tests/: CMakeLists.txt  shunting_yard_test.cpp
include/: compare.h  numeric_functions.h  shunting_yard.h  trapeze_rule.h  trigometric_degree.h
source/: CMakeLists.txt  compare.cpp  numeric_functions.cpp  shunting_yard.cpp  trapeze_rule.cpp  trigometric_degree.cpp
tests/: CMakeLists.txt  test_shunting_yard.cpp  test_shunting_yard.h
